--- a/style-sheet.css
+++ b/style-sheet.css
@@ -3,19 +3,18 @@
 /* Available classes= body, page-header, nav, heading, paragraph, sub-heading*/
 
 /* Style goals: 
-	* 5 pages total: "Home," "Experience" (education and work), "Projects," "Goals," "Contact Me"
+	* 4 pages total in website (main, page 2, page 3, page 4)
+	* Create a header with an un-warped background image + off-set (looks nice, readable) font + logo/image on left side
 	* Create/specify unique page background images/patterns and use colored boxes to set off text
-	* Uniform header for all pages (banner, horizontal navigation with buttons for each page, profile picture &/or logo)
-	* Uniform text within classes across all pages
-	* Link businesses, colleges/training programs, platforms, etc. on Experience page + link LinkedIn article for teaching
-	* Links to social media profiles (including Twitter?) and scoffin e-mail address in Contact Me
+	* Download/create new fonts and use them in code, building in back-ups for possible incompatibility
+	* Integrate with functional JavaScript for improved UX/UI
 */
 
 .body {background-color:#e68c4d; font-family="sans-serif";
 	
 }
 
-.page-header {background-color:hotpink; color=pink;
+.header {background-image:"orange-lily.jpg"; color=white;
 	
 }
 
@@ -30,6 +29,6 @@
 	
 }
 
-.sub-heading {
+.div {height:40px; width:30px; color=blue; background-color:white; float:right;
 	
 }
