--- a/style-sheet.css
+++ b/style-sheet.css
@@ -18,17 +18,17 @@
 	
 }
 
-.nav {color:blue;
+.nav {color:pink;
 	
 }
 
 .heading {color:yellow;
 }
 
-.paragraph {background-color:rgba(255,165,0,.75); color=black;
+.paragraph {background-color:rgba(255,165,0,.75); color=green;
 	
 }
 
-.div {height:40px; width:30px; color=blue; background-color:white; float:right;
+.div {height:50px; width:40px; color=blue; background-color:white; float:right;
 	
 }
