--- a/style-sheet.css
+++ b/style-sheet.css
@@ -18,7 +18,12 @@
 .header-h1 {color=purple; font-family="sans-serif";
 }
 
-.nav {color:pink;
+.nav {color=pink;
+}
+
+/* ------------------------------- STYLES FOR THE SITE <FOOTER> ----------------------------------------------------------- */
+
+.footer {color=white;
 }
 
 /* ------------------------------- STYLES FOR THE <SECTION> ON MAIN PAGE --------------------------------------------------- */
